Add roboflow library and download dataset

--- a/training/football_training_yolov5.ipynb
+++ b/training/football_training_yolov5.ipynb
@@ -9,10 +9,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: roboflow in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (1.1.44)\n",
+      "Requirement already satisfied: certifi in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (2024.8.30)\n",
+      "Requirement already satisfied: idna==3.7 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (3.7)\n",
+      "Requirement already satisfied: cycler in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (0.12.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (1.4.7)\n",
+      "Requirement already satisfied: matplotlib in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (3.9.2)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (1.26.4)\n",
+      "Requirement already satisfied: opencv-python-headless==4.10.0.84 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (4.10.0.84)\n",
+      "Requirement already satisfied: Pillow>=7.1.2 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (10.4.0)\n",
+      "Requirement already satisfied: python-dateutil in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (2.9.0.post0)\n",
+      "Requirement already satisfied: python-dotenv in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (1.0.1)\n",
+      "Requirement already satisfied: requests in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (2.32.3)\n",
+      "Requirement already satisfied: six in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (1.16.0)\n",
+      "Requirement already satisfied: urllib3>=1.26.6 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (2.2.2)\n",
+      "Requirement already satisfied: tqdm>=4.41.0 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (4.66.5)\n",
+      "Requirement already satisfied: PyYAML>=5.3.1 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (6.0.2)\n",
+      "Requirement already satisfied: requests-toolbelt in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (1.0.0)\n",
+      "Requirement already satisfied: filetype in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from roboflow) (1.2.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from matplotlib->roboflow) (1.3.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from matplotlib->roboflow) (4.53.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from matplotlib->roboflow) (24.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from matplotlib->roboflow) (3.1.4)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/dema/football_analysis/machine_learning/lib/python3.12/site-packages (from requests->roboflow) (3.3.2)\n",
+      "loading Roboflow workspace...\n",
+      "loading Roboflow project...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading Dataset Version Zip in football-players-detection-1 to yolov5pytorch:: 100%|██████████| 148663/148663 [03:20<00:00, 741.15it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Extracting Dataset Version Zip to football-players-detection-1 in yolov5pytorch:: 100%|██████████| 1338/1338 [00:00<00:00, 3165.83it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install roboflow\n",
+    "\n",
+    "from roboflow import Roboflow\n",
+    "rf = Roboflow(api_key=\"b45GliVy4nbJKeaV3LCy\")\n",
+    "project = rf.workspace(\"roboflow-jvuqo\").project(\"football-players-detection-3zvbc\")\n",
+    "version = project.version(1)\n",
+    "dataset = version.download(\"yolov5\")\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'football-players-detection-1/football-players-detection-1/valid'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import shutil \n",
+    "shutil.move(\"football-players-detection-1/test\", \"football-players-detection-1/football-players-detection-1/test\")\n",
+    "shutil.move(\"football-players-detection-1/train\", \"football-players-detection-1/football-players-detection-1/train\")\n",
+    "shutil.move(\"football-players-detection-1/valid\", \"football-players-detection-1/football-players-detection-1/valid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!yolo task=detect mode=train model=yolov5x.pt data = {dataset.location}/data.yaml apochs=100 imgsz=640"
+   ]
   }
  ],
  "metadata": {
